Easy spaces/main/default/objects/App__c/App__c.object-meta.xml
<CustomObject>
    <label>Applicant</label>
    <nameField>
        <label>App Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Applicants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>