Easy spaces/main/default/objects/App__c/fields/Candidate__c.field-meta.xml
<CustomField>
    <fullName>Candidate__c</fullName>
    <label>Candidate</label>
    <referenceTo>Candidate__c</referenceTo>
    <relationshipLabel>Applicants</relationshipLabel>
    <relationshipName>Applicants</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>