Easy spaces/main/default/objects/App__c/fields/Job_Posting__c.field-meta.xml
<CustomField>
    <fullName>Job_Posting__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Job Posting</label>
    <referenceTo>Job_Posting__c</referenceTo>
    <relationshipLabel>Applicants</relationshipLabel>
    <relationshipName>Applicants</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>