Easy spaces/main/default/objects/App__c/fields/LWD__c.field-meta.xml
<CustomField>
    <fullName>LWD__c</fullName>
    <label>LWD</label>
    <type>Date</type>
</CustomField>