Easy spaces/main/default/objects/App__c/fields/Offers_in_Hand__c.field-meta.xml
<CustomField>
    <fullName>Offers_in_Hand__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Offers in Hand</label>
    <type>Checkbox</type>
</CustomField>